Fixed alignment

--- a/CSS-3/style.css
+++ b/CSS-3/style.css
@@ -25,7 +25,7 @@ table{
     border-collapse: collapse;
 }
 
-div{margin: 0px 100px 0px 100px; text-transform: capitalize;}
+div, #product-info span{margin: 0px 100px 0px 100px; text-transform: capitalize;}
 .info-subtext{text-transform: none;}
 
 
